# meshProcessing

./: Base.cpp  Base.h  CMakeLists.txt  Patches.h  README.md  main.cpp  remesh.cpp  remesh.h  simplify.cpp  simplify.h
cmake/: FindOpenMesh.cmake
